@@ -563,7 +563,11 @@ class tl_iso_products extends Backend
 		}
 		else
 		{
-			$GLOBALS['TL_DCA']['tl_iso_products']['list']['sorting']['root'] = array(0);
+			$berror = '
+
+<ul id="tl_breadcrumb">
+  <li>' . $GLOBALS['TL_LANG']['ERR']['breadcrumbEmpty'] . '</li>
+</ul>';
 		}
 
 		// Add root link
@@ -575,7 +579,7 @@ class tl_iso_products extends Backend
 
 <ul id="tl_breadcrumb">
   <li>' . implode(' &gt; </li><li>', $arrLinks) . '</li>
-</ul>';
+</ul>'.$berror;
 	}
 	
 	
